# labycreatapipelicious

./: README.md  bot_monorepo_design.md  tree-structure.txt
bot_config/: tree-stucture-bot-common.txt
bot_config/bot_common/: fs.py  logging_utils.py
bot_config/bot_dcc/publish/: api.py  runners.py  schema.py
bot_config/bot_folder_structure/: templates.yml
bot_config/bot_natron/: __init__.py  app.py  menu.py
bot_config/bot_shows/MEGA/: project.yml
pyproject_templates/bot_common/: pyproject.toml
pyproject_templates/bot_config/: pyproject.toml
pyproject_templates/bot_dcc/: pyproject.toml
pyproject_templates/bot_dispatcher/: pyproject.toml
pyproject_templates/bot_nuke/: pyproject.toml
pyproject_templates/bot_shows/: pyproject.toml
pyproject_templates/packager/: pyproject.toml
scripts/: cleanup_pipeline_layout.sh  init_natron_publish_scaffold.sh
