[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bot_common"
version = "0.1.0"
description = "Shared utilities for VFX bots (context, constants, yaml resolver)"
readme = "README.md"
requires-python = ">=3.9"
dependencies = []

[project.optional-dependencies]
dev = ["pytest", "ruff", "mypy", "black", "build"]

[tool.setuptools.packages.find]
where = ["src"]
