[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "packager"
version = "0.1.0"
description = "CLI to package and distribute bot modules"
readme = "README.md"
requires-python = ">=3.9"
dependencies = []

[project.optional-dependencies]
dev = ["pytest", "ruff", "mypy", "black", "build"]

[tool.setuptools.packages.find]
where = ["src"]
